@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.143 2006/08/10 18:02:05 dries Exp $
+// $Id: CHANGELOG.txt,v 1.144 2006/08/14 05:47:36 drumm Exp $
 
 Drupal x.x.x, xxxx-xx-xx (development version)
 ------------------------
@@ -40,7 +40,9 @@ Drupal x.x.x, xxxx-xx-xx (development version)
     * made it easier for node access modules to work well with each other.
     * added configurable content types.
     * changed node rendering to work with structured arrays.
-- removed the archive module
+- removed the archive module.
+- upgrade system:
+    * created space for update branches.
 
 Drupal 4.7.0, 2006-05-01
 ------------------------
